--- a/index.html
+++ b/index.html
@@ -1,21 +1,63 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Impacto do Desmatamento</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+<html lang="pt-BR">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>Plataforma de Colaboração Com O Campo</title>
+    </head>
 <body>
     <header>
-        <h1>Impacto do Desmatamento</h1>
-        <img src="cataratas-do-iguacu.jpg" alt="Foto das Cataratas do Iguaçu, um lugar com muitas árvores e mata nativa preservada.">
-        <p>O desmatamento intensifica fenômenos negativos no meio ambiente e na vida das pessoas, afetando enchentes, temperatura e qualidade de vida.</p>
-        <nav>
-            <ul>
-                <li><a href="#problemas">Os Problemas</a></li>
-                <li><a href="#consequencias">Consequências</a></li>
-                <li><a href="#conclusao">Conclusão</a></li>
-            </ul>
-        </nav>
+        <h1>Plataforma de Colaboração com Meio Ambiente</h1>
+        <p>Do campo à cidade, colhendo oportunidades juntos.</p>
     </header>
+
+    <nav>
+        <ul>
+            <li><a href="#">Início</a></li>
+            <li><a href="#desafios">Desafios</a></li>
+            <li><a href="#solucoes">Soluções</a></li>
+            <li><a href="#projetos">Projetos</a></li>
+            <li><a href="#comunidade">Comunidade</a></li>
+            <li><a href="#contato">Contato</a></li>
+        </ul>
+    </nav>
+    <main>
+        <section class="hero">
+            <h2>Inove e Colabore por um Futuro Sustentável</h2>
+            <p>Conectando mentes do campo e da cidade para impulsionar o desenvolvimento econômico e social.</p>
+            <div class="call-to-action">
+                <a href="#cadastro">Participe da Nossa Comunidade</a>
+            </div>
+        </section>
+
+        <section id="desafios">
+            <h2>Desafios</h2>
+            </section>
+
+        <section id="solucoes">
+            <h2>Soluções Inovadoras</h2>
+
+            </section>
+
+        <section id="projetos">
+            <h2>Projetos Colaborativos</h2>
+
+            </section>
+
+        <section id="comunidade">
+            <h2>Nossa Comunidade</h2>
+
+            </section>
+
+        <section id="contato">
+            <h2>Contato</h2>
+
+            </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Plataforma Agrinho de Colaboração e Inovação</p>
+    </footer>
+</body>
+</html>
