--- a/index.html
+++ b/index.html
@@ -1,63 +1,62 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-        <title>Plataforma de Colaboração Com O Campo</title>
-    </head>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <title>Plataforma de Colaboração Sustentável - Agrinho</title> <link rel="stylesheet" href="style.css" />
+    <meta name="description" content="Plataforma de colaboração para um futuro sustentável, conectando campo e cidade para soluções ambientais e sociais." />
+    <meta name="keywords" content="sustentabilidade, meio ambiente, colaboração, agrinho, desenvolvimento rural, inovação, campo, cidade, desafios ambientais" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+</head>
 <body>
-    <header>
-        <h1>Plataforma de Colaboração com Meio Ambiente</h1>
-        <p>Do campo à cidade, colhendo oportunidades juntos.</p>
+
+    <a href="#main-content" class="skip-link">Pular para o conteúdo principal</a>
+
+    <header role="banner">
+        <div class="header-content"> <h1>Plataforma de Colaboração com o Meio Ambiente</h1>
+            <p>Do campo à cidade, colhendo oportunidades juntos para um futuro mais verde.</p> </div>
     </header>
 
-    <nav>
-        <ul>
-            <li><a href="#">Início</a></li>
-            <li><a href="#desafios">Desafios</a></li>
-            <li><a href="#solucoes">Soluções</a></li>
-            <li><a href="#projetos">Projetos</a></li>
-            <li><a href="#comunidade">Comunidade</a></li>
-            <li><a href="#contato">Contato</a></li>
-        </ul>
+    <nav aria-label="Menu de Navegação Principal"> <ul class="nav-list"> <li><a href="#" aria-current="page">Início</a></li> <li><a href="#desafios-ambientais">Desafios</a></li> <li><a href="#solucoes-sustentaveis">Soluções</a></li> </ul>
     </nav>
-    <main>
-        <section class="hero">
-            <h2>Inove e Colabore por um Futuro Sustentável</h2>
-            <p>Conectando mentes do campo e da cidade para impulsionar o desenvolvimento econômico e social.</p>
-            <div class="call-to-action">
-                <a href="#cadastro">Participe da Nossa Comunidade</a>
+
+    <main id="main-content"> <section class="hero" aria-labelledby="hero-heading"> <h2 id="hero-heading">Colabore por um Futuro Sustentável</h2>
+            <p>Conectando mentes do campo e da cidade para impulsionar o desenvolvimento econômico e social através de práticas sustentáveis.</p> <div class="call-to-action"> <a href="https://www.cerradodasaguas.org.br/invista-pelo-futuro" target="_blank" rel="noopener noreferrer" aria-label="Saiba mais sobre Campanhas de Meio Ambiente">
+                    Conheça Nossas Campanhas Ambientais
+                </a>
             </div>
         </section>
 
-        <section id="desafios">
-            <h2>Desafios</h2>
-            </section>
+        <section id="desafios-ambientais" class="content-section" aria-labelledby="desafios-heading"> <h2 class="section-title" id="desafios-heading">Desafios para o Dia a Dia Sustentável</h2> <ul class="challenge-list"> <li>
+                    <strong>Economize energia:</strong> Troque lâmpadas por modelos eficientes de LED e evite luzes acesas desnecessariamente.
+                </li>
+                <li>
+                    <strong>Reduza o consumo de papel:</strong> Prefira documentos digitais e reutilize papéis sempre que possível antes de reciclar.
+                </li>
+                <li>
+                    <strong>Experimente um dia vegetariano:</strong> Contribua para a economia de água e a preservação de florestas.
+                </li>
+                <li>
+                    <strong>Uso consciente da água:</strong> Desligue a torneira enquanto escova os dentes ou ensaboa a louça para economizar água.
+                </li>
+                <li>
+                    <strong>Diminua o uso de plástico:</strong> Utilize sacolas reutilizáveis, garrafinhas de água próprias e evite descartáveis.
+                </li>
+            </ul>
+            <div id="image_ilus" class="illustration-container"> <img src="https://via.placeholder.com/600x400/e0f0ed/2ecc71?text=Ilustração+Sustentável" alt="Ilustração de pessoas colaborando com o meio ambiente, plantando árvores e reciclando." class="responsive-img"> </div>
+        </section>
 
-        <section id="solucoes">
-            <h2>Soluções Inovadoras</h2>
-
-            </section>
-
-        <section id="projetos">
-            <h2>Projetos Colaborativos</h2>
-
-            </section>
-
-        <section id="comunidade">
-            <h2>Nossa Comunidade</h2>
-
-            </section>
-
-        <section id="contato">
-            <h2>Contato</h2>
-
-            </section>
+        <section id="solucoes-sustentaveis" class="content-section" aria-labelledby="solucoes-heading"> <h2 class="section-title" id="solucoes-heading">Soluções e Inspirações para um Futuro Verde</h2> <p>Assista ao vídeo abaixo com ideias inspiradoras para um futuro mais sustentável:</p>
+            <div class="video-container"> <iframe
+                    title="Vídeo inspirador sobre sustentabilidade e práticas ecológicas"
+                    src="https://www.youtube.com/embed/Db2SIzz00_c" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+            </div>
+        </section>
     </main>
 
-    <footer>
-        <p>&copy; 2025 Plataforma Agrinho de Colaboração e Inovação</p>
-    </footer>
+    <footer role="contentinfo" id="contato-info"> <p>© 2025 Plataforma Agrinho de Colaboração e Inovação. Todos os direitos reservados.</p> </footer>
+
 </body>
 </html>
